--- a/.github/workflows/github-actions-devsecops.yml
+++ b/.github/workflows/github-actions-devsecops.yml
@@ -53,7 +53,7 @@ jobs:
           scan-ref: '.'
           format: 'table'
           severity: 'CRITICAL,HIGH'
-          exit-code: '0'  # Cambiado a 0 para no fallar durante pruebas
+          exit-code: '-1'
 
   # ===========================================================================
   # FASE 3: STATIC APPLICATION SECURITY TESTING (SAST)
