--- a/.github/workflows/github-actions-devsecops.yml
+++ b/.github/workflows/github-actions-devsecops.yml
@@ -53,7 +53,7 @@ jobs:
           scan-ref: '.'
           format: 'table'
           severity: 'CRITICAL,HIGH'
-          exit-code: '-1'
+          exit-code: '1'
 
   # ===========================================================================
   # FASE 3: STATIC APPLICATION SECURITY TESTING (SAST)
@@ -72,7 +72,7 @@ jobs:
       
       - name: Ejecutar Semgrep
         run: |
-          semgrep --config=p/owasp-top-ten --config=p/security-audit --config=p/secrets . || true
+          semgrep --config=p/owasp-top-ten --config=p/security-audit --config=p/secrets .
 
   # ===========================================================================
   # FASE 4: INFRASTRUCTURE AS CODE SECURITY
